<resources>
    <string name="app_name">Inventory App</string>
    <string name="home_btn_users">Users</string>
    <string name="home_btn_devices">Devices</string>
    <string name="btn_checkin">Check In Device</string>
    <string name="btn_checkout">Check Out Device</string>

    <string name="title_checkout">Device Rental</string>

    <string name="title_device_list">Devices</string>
    <string name="title_device_detail">Device Detail</string>
    <string name="title_device_detail_edit">Add/Edit Device</string>
    <string name="label_device_serial">Serial: </string>
    <string name="hint_device_serial">Serial Number</string>
    <string name="label_device_model">Model: </string>
    <string name="label_device_color">Color: </string>
    <string name="label_device_save">Save Device</string>
    <string name="btn_device_detail_edit_btn">Edit Device</string>
    <string name="btn_device_detail_delete_btn">Delete Device</string>

    <string name="title_user_list">Users</string>
    <string name="title_user_detail">User Detail</string>
    <string name="title_user_detail_edit">Add/Edit User</string>
    <string name="label_first_name">First:</string>
    <string name="hint_first_name">First Name</string>
    <string name="label_family_name">Last:</string>
    <string name="hint_family_name">Last Name</string>
    <string name="label_group">Group:</string>

    <string name="label_user_save">Save User</string>
    <string name="btn_user_detail_edit">Edit User</string>
    <string name="btn_user_detail_delete">Delete User</string>

    <string name="user_no_device">NO DEVICE</string>
    <string name="label_device">Device:</string>

</resources>
